# streamlit

./: MANIFEST.in  README.md  app.py  check_env.py  demo_features.py  pyproject.toml  quick_setup.py  requirements-minimal.txt  requirements.txt  run_with_encoding.bat  setup.py  setup_pip_mirror.py  start.bat  start.sh
conf/: conf.py
data/: test.xlsx
main/: SQL.py  advanced_sql.py  conf.py  config.py  dy.py  example.py  history_manager.py  main.py  performance.py  security.py  sql_generate.py  sql_templates.py  streamlit_example.py  test.xlsx  utils.py
main/static/: sql_example.xlsx  样例.xlsx
scripts/: check_encoding.py  check_env.py  demo_features.py  demo_history.json  quick_setup.py  start.bat  start.sh
sql_generator/: __init__.py
sql_generator/config/: __init__.py  constants.py
sql_generator/core/: __init__.py  advanced_sql.py  sql_formatter.py  sql_generator.py
sql_generator/templates/: __init__.py  sql_example.xlsx  sql_patterns.py
sql_generator/ui/: main_app.py  streamlit_example.py
sql_generator/utils/: __init__.py  file_utils.py  history_manager.py  security.py  ui_utils.py
tests/: __init__.py  sample_sql.sql  test_history_manager.py  test_sql_formatter.py
